--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,9 @@
-<% provide(:title, 'Home') %>
-
+<div class="center">
 <h1>Forgetting Something?</h1>
-   <p>
-     Welcome! We're here to help you remember to not forget to remember, or something like that!
-   </p>
- 
+
+<p>
+    <script language="javascript" type="text/javascript">
+       newQuote();
+    </script>
+</p>
+ </div>
