early CSS and working carousel

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,13 +1,15 @@
-@import "bootstrap";
+
 
 /* universal */
 
+
 html {
   overflow-y: scroll;
+  background-color: #ffaeb9;
 }
 
 body {
-  padding-top: 40px;
+  background-color: #ffaeb9;
 }
 
 section {
@@ -26,6 +28,49 @@ textarea {
   margin-bottom: 10px;
 }
 
-p {
-  color: red;
+.left {
+  text-align: left;
 }
+
+/* navigation */
+
+.nav {
+	width: 100%;
+	float: left;
+	margin: 0 0 3em 0;
+	padding: 0;
+	list-style: none;
+	background-color: ffaeb9;
+	border-bottom: 1px solid #ccc; 
+	border-top: 1px solid #ccc; }
+.nav li {
+	float: left;
+}
+
+.nav li a {
+	display: block;
+	padding: 8px 15px;
+	text-decoration: none;
+	font-weight: bold;
+	color: #069;
+	border-right: 1px solid #ccc;
+}
+
+.nav li a:hover {
+	color: #c00;
+	background-color: #fff;
+}
+
+/* carousel */
+
+#carousel {
+    width:800px;
+    height: 300px;
+    display: relative;
+  }
+#carousel img {
+    display: hidden; /* hide images until carousel prepares them */
+    cursor: pointer; /* not needed if you wrap carousel items in links */
+  }
+
+
