--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,9 +1,9 @@
-<% provide(:title, 'Why Am I Here?') %>
-<h1>Why Am I Here?</h1>
+<% provide(:title, 'About Saikyo') %>
+<h1>About Saikyo</h1>
    <p>
-  You already forgot why you're here? Oh, that's not a good sign. You may need to get that checked out.
+  Inspired by a passion for cooking, a love of video game series Street Fighter, and a night of drinking with fellow fighting game fans, I knew I wanted to open up this restaurant.
    </p>
    <p>
-	Oh, you just want to know what this site does? Good point. I guess I'm the one who forgot to tell you first. Whoops. Anyway, Forgetting Something? is basically a to-do site. You can make a list of your tasks on your very own page. Don't forget to come back and check your page, though!
+	More will be added here. YAHOO!
    </p>
 
