--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,5 @@
-<div id = "center">
+<% provide(:title, 'Home') %>
+<div id="fixedWidth">
 <div id="carousel">
 <%= image_tag("6.jpg", alt: "car1") %>
 <%= image_tag("7.jpg", alt: "car2") %>
