--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,14 @@
 </head>
 <body>
     <header>
-      <div class="siteLogo">
+      <div class="fixedWidth">
+         <div class="siteLogo">
           <%= link_to image_tag("templogo.gif", alt: "Saikyo"), '#' %>
+         </div>
             <ul class="nav">
               <li><%= link_to "Menu",    '#' %></li>
-              <li><%= link_to "About",    '#' %></li>
+              <li><%= link_to "Game Room",    '#' %></li>
+              <li><%= link_to "About", about_path %></li>
 	      <li><%= link_to "Contact",    '#' %></li>
             </ul>
         </div>
@@ -21,11 +24,11 @@
       <%= yield %>
     </div>
     <footer>
-	<ul class="nav">
-              <li><%= link_to "Menu",    '#' %></li>
-              <li><%= link_to "About",    '#' %></li>
-	      <li><%= link_to "Contact",    '#' %></li>
-        </ul>
+	<div class="fixedWidth">
+            <ul class="nav">
+              <li>Copyright 2013 All Rights Reserved</li>
+            </ul>
+        </div>
     </footer>
   </body>
 </html>
