--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,9 +1,11 @@
-<% provide(:title, 'About Saikyo') %>
-<h1>About Saikyo</h1>
+<% provide(:title, 'About Us') %>
+<div class="fixedWidth">
+<h1 class="center">About Us</h1>
    <p>
-  Inspired by a passion for cooking, a love of video game series Street Fighter, and a night of drinking with fellow fighting game fans, I knew I wanted to open up this restaurant.
+  In early 2013, the members of fighting game club Mad City Monks jokingly tossed around ideas for a bar themed around the games they loved to play. Unfortunately, this was not only spurred on by a night of drinking. Their main location of operation was set to close, leaving the Monks without a place to play.
    </p>
    <p>
-	More will be added here. YAHOO!
+  In early 2013, the members of fighting game club Mad City Monks jokingly tossed around ideas for a bar themed around the games they loved to play. Unfortunately, this was not only spurred on by a night of drinking. Their main location of operation was set to close, leaving the Monks without a place to play.
    </p>
+</div>
 
