--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -76,6 +76,21 @@ textarea {
 	#background-color: #fff;
 }
 
+/* login */
+
+.fixedLogin {
+  width: 975px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 40px;
+  padding-bottom: 70px;
+  text-align: left;
+  background-color: #B9BEC2;
+}
+
+.loginForm {
+  padding-left:60px;
+}
 /* carousel */
 
 #carousel {
