--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <header>
       <div class="fixedWidth">
          <div class="siteLogo">
-          <%= link_to image_tag("templogo.gif", alt: "Saikyo"), '#' %>
+          <%= link_to image_tag("templogo.gif", alt: "Saikyo"), root_path %>
          </div>
             <ul class="nav">
               <li><%= link_to "Menu",    '#' %></li>
