--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,10 @@
           <%= link_to image_tag("templogo.gif", alt: "Saikyo"), root_path %>
          </div>
             <ul class="nav">
-              <% if signed_in? %>
+              <% if current_siteadmin %>
                 <li><%= link_to "Edit Menu",    '#' %></li>
                 <li><%= link_to "Edit Reservations",    '#' %></li>
-	        <li><%= link_to "Log Out", signout_path %></li>
+	        <li><%= link_to "Log Out", signed_out_path %></li>
               <% else %>
                 <li><%= link_to "Menu",    '#' %></li>
                 <li><%= link_to "Game Room",    '#' %></li>
@@ -27,6 +27,9 @@
         </div>
     </header>
     <div class="container">
+      <% flash.each do |name, msg| %>
+        <%= content_tag :div, msg, :id => "flash_#{name}" %>
+      <% end %>
       <%= yield %>
     </div>
     <footer>
