New fonts and new wings ad

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -10,6 +10,9 @@ body {
   background-color: #4E545A;
 }
 
+p, h1 {
+  font-family: 'Russo One', sans-serif;
+}
 
 section {
   overflow: auto;
@@ -60,15 +63,15 @@ textarea {
 .nav li {
 	display:inline;
         background-color: #E7EDF3;
+        font-family: 'Russo One', sans-serif;
+        font-size: large;
 }
 
 .nav li a {
 	display: inline-block;
 	padding: 10px;
 	text-decoration: none;
-        font-family: helvetica;
-	font-weight: bold;
-	color: #272A2D;
+        color: #272A2D;
 }
 
 .nav li a:hover {
