--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,10 @@
 <% provide(:title, 'Home') %>
 <div id="fixedWidth">
 <div id="carousel">
-<%= image_tag("wingsad.jpg", alt: "wings") %>
-<%= image_tag("wingsad.jpg", alt: "car2") %>
-<%= image_tag("wingsad.jpg", alt: "car1") %>
-<%= image_tag("wingsad.jpg", alt: "car1") %>
+<%= image_tag("wingsad2.jpg", alt: "wings") %>
+<%= image_tag("wingsad2.jpg", alt: "car2") %>
+<%= image_tag("wingsad2.jpg", alt: "car1") %>
+<%= image_tag("wingsad2.jpg", alt: "car1") %>
 </div>
 </div>
 
