--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,11 +15,11 @@
          </div>
             <ul class="nav">
               <% if current_siteadmin %>
-                <li><%= link_to "Edit Menu",    '#' %></li>
+                <li><%= link_to "Edit Menu", edit_menu_path %></li>
                 <li><%= link_to "Edit Reservations",    '#' %></li>
 	        <li><%= link_to "Log Out", signed_out_path %></li>
               <% else %>
-                <li><%= link_to "Menu",    '#' %></li>
+                <li><%= link_to "Menu", menu_path %></li>
                 <li><%= link_to "Game Room",    '#' %></li>
                 <li><%= link_to "About", about_path %></li>
 	        <li><%= link_to "Contact",    '#' %></li>
