--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -5,7 +5,7 @@
   In early 2013, the members of fighting game club Mad City Monks jokingly tossed around ideas for a bar themed around the games they loved to play. Unfortunately, this was not only spurred on by a night of drinking. Their main location of operation was set to close, leaving the Monks without a place to play.
    </p>
    <p>
-  In early 2013, the members of fighting game club Mad City Monks jokingly tossed around ideas for a bar themed around the games they loved to play. Unfortunately, this was not only spurred on by a night of drinking. Their main location of operation was set to close, leaving the Monks without a place to play.
-   </p>
+  That night of seemingly crazy ideas became the inspiration for Dojo. We wanted to create an establishment for all to enjoy. You don't need to know or like anything about games to enjoy the delicious food that comes out of our kitchen. If you are, however. looking for somewhere to put your quarters, our Arcade Room contains many classic and modern fighting games to choose from. Looking for a place to hold a tournament? Dojo's Tournament Room has that covered.
+  </p>
 </div>
 
