Add works, edit still crap

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,9 +2,8 @@
 <div id="fixedWidth">
 <div id="carousel">
 <%= image_tag("wingsad2.jpg", alt: "wings") %>
-<%= image_tag("wingsad2.jpg", alt: "car2") %>
-<%= image_tag("wingsad2.jpg", alt: "car1") %>
-<%= image_tag("wingsad2.jpg", alt: "car1") %>
+<%= image_tag("tigerad2.jpg", alt: "car2") %>
+<%= image_tag("tournamentad3.jpg", alt: "car1") %>
 </div>
 </div>
 
