--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,8 +1,9 @@
-<% provide(:title, 'Edit Item') %>
+<% provide(:title, 'New Item') %>
 <div class="fixedWidth">
+<h1 class="center">Add To Menu</h1>
 
 <div class="center">
-<%= form_for(food) do |f| %>
+<%= form_for(@food) do |f| %>
       <p>
       <%= f.label :name %>
       <%= f.text_field :name %>
@@ -20,8 +21,7 @@
       <%= f.label :price %>
       <%= f.text_field :price %>
  </p>
-      <%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
+      <%= f.submit "Add", class: "btn btn-large btn-primary" %>
     <% end %>
 </div>
-
 </div>
